# SlicerRegistrationQA

./: CMakeLists.txt  Documentation.md  LICENSE  README.md  RegQAExtension.s4ext  SubjectHierarchyReadMe  TestRegHierarchy.mrml  steeringfile.xml
AbsoluteDifference/: AbsoluteDifference.cxx  AbsoluteDifference.xml  CMakeLists.txt  ConvertSlicerROIToRegion.cxx
CreateRegistrationHierarchy/: CMakeLists.txt  CreateRegistrationHierarchy.py
Introduction/: RegistrationQA Introduction.docx
InverseConsistency/: CMakeLists.txt  ConvertSlicerROIToRegion.cxx  InverseConsistency.cxx  InverseConsistency.xml
JacobianFilter/: CMakeLists.txt  ConvertSlicerROIToRegion.cxx  ConvertSlicerROIToRegion.h  JacobianFilter.cxx  JacobianFilter.xml
JacobianFilter/JacobianFilter/: CMakeLists.txt  CMakeLists.txt~  JacobianFilter.cxx  JacobianFilter.cxx~  JacobianFilter.xml  JacobianFilter.xml~
ReadRegistrationNode/: CMakeLists.txt  ReadRegistrationNode.py
ReadRegistrationNodeKA/: CMakeLists.txt  Process  Process~  ReadRegistrationNodeKA.py
RegQA/: CMakeLists.txt  qSlicerRegQAModule.cxx  qSlicerRegQAModule.h  qSlicerRegQAModuleWidget.cxx  qSlicerRegQAModuleWidget.h
RegQA/Logic/: CMakeLists.txt  vtkMRMLRegQANode.cxx  vtkMRMLRegQANode.h  vtkSlicerRegQALogic.cxx  vtkSlicerRegQALogic.h
RegQA/Resources/: qSlicerRegQAModule.qrc
RegQA/Resources/UI/: qSlicerRegQAModule.ui
RegQA/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyRegQAPlugin.cxx  qSlicerSubjectHierarchyRegQAPlugin.h
RegQA/SubjectHierarchyPlugins/Resources/.svn/: entries
RegistrationHierarchy/: CMakeLists.txt  RegistrationHierarchy.py
RegistrationQA/: CMakeLists.txt  qSlicerRegistrationQAModule.cxx  qSlicerRegistrationQAModule.h  qSlicerRegistrationQAModuleWidget.cxx  qSlicerRegistrationQAModuleWidget.h
RegistrationQA/Logic/: CMakeLists.txt  vtkMRMLRegistrationQANode.cxx  vtkMRMLRegistrationQANode.h  vtkSlicerRegistrationQALogic.cxx  vtkSlicerRegistrationQALogic.h
RegistrationQA/Resources/: qSlicerRegistrationQAModule.qrc
RegistrationQA/Resources/UI/: qSlicerRegistrationQAModule.ui
RegistrationQA/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyRegistrationQAPlugin.cxx  qSlicerSubjectHierarchyRegistrationQAPlugin.h
RegistrationQA/SubjectHierarchyPlugins/.svn/: entries
RegistrationQA/SubjectHierarchyPlugins/.svn/text-base/: CMakeLists.txt.svn-base  qSlicerSubjectHierarchyRtDoseVolumePlugin.cxx.svn-base  qSlicerSubjectHierarchyRtImagePlugin.cxx.svn-base  qSlicerSubjectHierarchyRtImagePlugin.h.svn-base
RegistrationQA/SubjectHierarchyPlugins/Resources/: qSlicerRegistrationQASubjectHierarchyPlugins.qrc
RegistrationQA/SubjectHierarchyPlugins/Resources/Icons/.svn/: all-wcprops
RegistrationQA/Testing/Python/: CMakeLists.txt  RegistrationQATest.py
RegistrationQualityModule/: CMakeLists.txt  qSlicerRegistrationQualityModule.cxx  qSlicerRegistrationQualityModule.h  qSlicerRegistrationQualityModuleWidget.cxx  qSlicerRegistrationQualityModuleWidget.h
RegistrationQualityModule/Logic/: CMakeLists.txt  DIRQAImage.cxx  DIRQAImage.h  DeformationFieldLabels.txt  vtkDFVGlyph3D.cxx  vtkDFVGlyph3D.h  vtkMRMLRegistrationQualityInputNode.cxx  vtkMRMLRegistrationQualityInputNode.h  vtkMRMLRegistrationQualityNode.cxx  vtkMRMLRegistrationQualityNode.h  vtkSlicerRegistrationQualityLogic.cxx  vtkSlicerRegistrationQualityLogic.h
RegistrationQualityModule/Resources/: qSlicerRegistrationQualityModule.qrc
RegistrationQualityModule/Resources/UI/: qSlicerRegistrationQualityModule.ui
RegistrationQualityModule/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyRegistrationQualityPlugin.cxx  qSlicerSubjectHierarchyRegistrationQualityPlugin.h
RegistrationQualityModule/SubjectHierarchyPlugins/.svn/: all-wcprops
RegistrationQualityModule/SubjectHierarchyPlugins/.svn/text-base/: qSlicerSubjectHierarchyRtDoseVolumePlugin.h.svn-base
RegistrationQualityModule/SubjectHierarchyPlugins/Resources/.svn/: all-wcprops
RegistrationQualityModule/SubjectHierarchyPlugins/Resources/Icons/.svn/: entries
RegistrationQualityModule/Widgets/: CMakeLists.txt  vtkSlicerRTScalarBarActor.h
RegistrationQualityModule/Widgets/.svn/: all-wcprops  entries
RegistrationQualityModule/Widgets/.svn/text-base/: CMakeLists.txt.svn-base  vtkSlicerRTScalarBarActor.cxx.svn-base  vtkSlicerRTScalarBarActor.h.svn-base
SquaredDifference/: CMakeLists.txt  SquaredDifference.cxx  SquaredDifference.cxx~  SquaredDifference.xml  SquaredDifference.xml~
TestFiles/: Acknowledgment.txt
tinyxml/: CMakeLists.txt
